# mosaic

./: .gitignore  .ocamlformat-ignore  CHANGES.md  README.md  dune-project  matrix-eio.opam  matrix.opam  matrix.opam.template  mosaic.opam  toffee.opam  tree-sitter.opam
matrix/: README.md
matrix-eio/: README.md
matrix-eio/lib/: dune  matrix_eio.ml  matrix_eio.mli
matrix/bench/: README.md  ansi.thumper  bench_ansi.ml  bench_glyph.ml  bench_grid.ml  bench_input.ml  bench_screen.ml  bench_text.ml  dune  glyph.thumper  grid.thumper  input.thumper  screen.thumper  text.thumper
matrix/examples/: README.md
matrix/examples/01-rain/: main.ml
matrix/examples/02-life/: main.ml
matrix/examples/03-mandelbrot/: main.ml
matrix/examples/04-runes/: main.ml
matrix/examples/06-canvas/: main.ml
matrix/examples/08-terminal/: main.ml
matrix/examples/09-snake/: main.ml
matrix/examples/12-installer/: main.ml
matrix/examples/13-dragdrop/: main.ml
matrix/examples/14-particles/: main.ml
matrix/examples/x-emulator/: dune  dune-project  main.ml
matrix/lib/: debug_overlay.ml  debug_overlay.mli  dune  frame_dump.ml  frame_dump.mli  image.ml  image.mli  matrix.ml  matrix.mli  primary.ml  primary.mli
matrix/lib/ansi/: ansi.ml  ansi.mli  attr.mli  color.ml  color.mli  escape.ml  escape.mli  parser.ml  parser.mli  segment.mli  sgr_state.ml  sgr_state.mli  style.mli  writer.mli
matrix/lib/charts/: dune  layout.ml  mark.ml  matrix_charts.ml  matrix_charts.mli  render.ml  sparkline.mli
matrix/lib/glyph/: glyph.ml  glyph.mli  unicode.ml  unicode.mli  unicode_data.ml  unicode_data.mli  uuseg_base.mli  uuseg_grapheme_cluster.ml  uuseg_grapheme_cluster.mli
matrix/lib/grid/: border.ml  border.mli  dune  grapheme_store.ml  grapheme_store.mli  grapheme_tracker.ml  grapheme_tracker.mli  grid.ml  grid.mli  grid_data.ml  packed_cell.ml
matrix/lib/input/: dune  event.ml  event.mli  input.ml  input.mli  keymap.ml  keymap.mli  parser.ml  parser.mli  tokenizer.ml  tokenizer.mli
matrix/lib/pty/: pty.mli  pty_stubs.c
matrix/lib/screen/: cursor_state.mli  dune  hit_grid.ml  hit_grid.mli  screen.ml  screen.mli
matrix/lib/terminal/: caps.ml  caps.mli  terminal.ml  terminal.mli  terminal_stubs.c
matrix/lib/terminfo/: terminfo.mli
matrix/lib/text/: dune  text.ml  text.mli  unicode.mli  unicode_data.ml  uuseg_base.mli  uuseg_grapheme_cluster.ml  uuseg_grapheme_cluster.mli
matrix/lib/unix/: matrix_unix.ml  matrix_unix.mli
matrix/lib/vte/: dune  vte.ml  vte.mli
matrix/support/: gen_unicode_data.ml
matrix/test/: dune  test_ansi.ml  test_glyph.ml  test_grid.ml  test_image.ml  test_input.ml  test_pty.ml  test_runtime.ml  test_screen.ml  test_terminal.ml  test_text.ml  test_vte.ml
matrix/test/charts/: dune  test_charts.ml
mosaic/: README.md
mosaic/examples/: README.md
mosaic/examples/01-counter/: README.md  main.ml
mosaic/examples/02-text/: main.ml
mosaic/examples/03-spinner/: main.ml
mosaic/examples/04-input/: main.ml
mosaic/examples/05-select/: main.ml
mosaic/examples/06-tabs/: main.ml
mosaic/examples/07-slider/: main.ml
mosaic/examples/08-table/: main.ml
mosaic/examples/09-canvas/: main.ml
mosaic/examples/10-code/: dune  main.ml
mosaic/examples/11-scrollbox/: main.ml
mosaic/examples/12-form/: main.ml
mosaic/examples/13-markdown/: main.ml
mosaic/examples/14-selection/: main.ml
mosaic/examples/15-charts/: dune  main.ml
mosaic/examples/16-timer/: main.ml
mosaic/examples/17-progress-bar/: README.md  main.ml
mosaic/examples/18-textarea/: README.md  main.ml
mosaic/examples/19-tree/: README.md  main.ml
mosaic/examples/20-async/: README.md  dune  main.ml
mosaic/examples/21-line-number/: README.md  main.ml
mosaic/examples/22-layout/: README.md  main.ml
mosaic/examples/23-resize/: README.md  main.ml
mosaic/examples/24-eio/: README.md  dune  main.ml
mosaic/examples/25-diff/: README.md  main.ml
mosaic/examples/x-agent/: README.md  dune  main.ml
mosaic/examples/x-code-editor/: README.md  dune  main.ml
mosaic/examples/x-dashboard/: dune  main.ml
mosaic/examples/x-syspanel/: dune  main.ml
mosaic/lib/mlx/: dune  mosaic_mlx.ml  mosaic_mlx.mli
mosaic/lib/mosaic/: dune  mosaic.ml  mosaic.mli  reconciler.ml  reconciler.mli
mosaic/lib/ui/: dune  edit_buffer.ml  edit_buffer.mli  edit_surface.ml  edit_surface.mli  event.ml  event.mli  keymap.ml  keymap.mli  mosaic_ui.ml  mosaic_ui.mli  renderable.ml  renderable.mli  renderer.ml  renderer.mli  select.mli  selection.ml  selection.mli  syntax_highlight.ml  syntax_highlight.mli  syntax_style.ml  syntax_style.mli  syntax_theme.ml  syntax_theme.mli  text_buffer.ml  text_buffer.mli  text_renderable.ml  text_renderable.mli  text_surface.ml  text_surface.mli  vnode.ml  vnode.mli
mosaic/lib/unix/: mosaic_unix.ml  mosaic_unix.mli
mosaic/test/expect/: dune  expect_harness.ml  test_box.ml  test_canvas.ml  test_diff.ml  test_markdown.ml  test_progress_bar.ml  test_scroll_box.ml  test_select.ml  test_slider.ml  test_spinner.ml  test_tab_select.ml  test_table.ml  test_text.ml  test_text_input.ml  test_textarea.ml  test_tree.ml
mosaic/test/helpers/: dune  test_harness.ml
mosaic/test/ui/: test_canvas.ml
mosaic/test/unit/: dune  test_box.ml  test_canvas.ml  test_code.ml  test_edit_buffer.ml  test_event.ml  test_markdown.ml  test_progress_bar.ml  test_reconciler.ml  test_renderable.ml  test_renderer.ml  test_scroll_bar.ml  test_scroll_box.ml  test_select.ml  test_selection.ml  test_slider.ml  test_spinner.ml  test_subscriptions.ml  test_syntax_highlight.ml  test_tab_select.ml  test_table.ml  test_text.ml  test_text_buffer.ml  test_text_input.ml  test_text_surface.ml  test_textarea.ml  test_tree.ml  test_vnode.ml
toffee/bench/: README.md  bench_toffee.ml  dune  toffee.thumper
toffee/lib/: toffee.mli
toffee/lib/geometry/: size.ml  size.mli
toffee/lib/style/: text_align.mli
toffee/lib/tree/: available_space.ml  (+3 more)
tree-sitter/: README.md
tree-sitter/config/: discover.ml
tree-sitter/lib/: tree_sitter.ml  tree_sitter.mli  tree_sitter_stubs.c
tree-sitter/test/: dune  test_tree_sitter.ml
(+45 files in other folders)
