(executable
 (name bench_ansi)
 (libraries thumper matrix.ansi))

(executable
 (name bench_glyph)
 (libraries thumper matrix.glyph))

(executable
 (name bench_text)
 (libraries thumper matrix.text))

(executable
 (name bench_input)
 (libraries thumper matrix.input))

(executable
 (name bench_grid)
 (modules bench_grid)
 (libraries thumper matrix.grid matrix.glyph matrix.ansi))

(executable
 (name bench_screen)
 (modules bench_screen)
 (libraries thumper matrix.screen matrix.grid matrix.glyph matrix.ansi))

(rule
 (alias runtest)
 (action
  (progn
   (run %{exe:bench_ansi.exe} -q)
   (diff? ansi.thumper ansi.thumper.corrected))))

(rule
 (alias runtest)
 (action
  (progn
   (run %{exe:bench_glyph.exe} -q)
   (diff? glyph.thumper glyph.thumper.corrected))))

(rule
 (alias runtest)
 (action
  (progn
   (run %{exe:bench_text.exe} -q)
   (diff? text.thumper text.thumper.corrected))))

(rule
 (alias runtest)
 (action
  (progn
   (run %{exe:bench_input.exe} -q)
   (diff? input.thumper input.thumper.corrected))))

(rule
 (alias runtest)
 (action
  (progn
   (run %{exe:bench_grid.exe} -q)
   (diff? grid.thumper grid.thumper.corrected))))

(rule
 (alias runtest)
 (action
  (progn
   (run %{exe:bench_screen.exe} -q)
   (diff? screen.thumper screen.thumper.corrected))))
