(executable
 (name bench_ansi)
 (libraries thumper matrix.ansi))

(executable
 (name bench_text)
 (libraries thumper matrix.text))

(executable
 (name bench_input)
 (libraries thumper matrix.input))

(executable
 (name bench_grid)
 (modules bench_grid)
 (libraries thumper matrix.grid matrix.ansi))

(executable
 (name bench_screen)
 (modules bench_screen)
 (libraries thumper matrix.screen matrix.grid matrix.ansi))

(rule
 (alias runtest)
 (action
  (progn
   (run %{exe:bench_ansi.exe} -q --ci)
   (diff? ansi.thumper ansi.thumper.corrected)
   (run %{exe:bench_text.exe} -q --ci)
   (diff? text.thumper text.thumper.corrected)
   (run %{exe:bench_input.exe} -q --ci)
   (diff? input.thumper input.thumper.corrected)
   (run %{exe:bench_grid.exe} -q --ci)
   (diff? grid.thumper grid.thumper.corrected)
   (run %{exe:bench_screen.exe} -q --ci)
   (diff? screen.thumper screen.thumper.corrected))))
