(test
 (name bench_ansi)
 (libraries thumper matrix.ansi))

(test
 (name bench_text)
 (libraries thumper matrix.text))

(test
 (name bench_input)
 (libraries thumper matrix.input))

(test
 (name bench_grid)
 (libraries thumper matrix.grid matrix.ansi))

(test
 (name bench_screen)
 (libraries thumper matrix.screen matrix.grid matrix.ansi))

(rule
 (alias bench)
 (action
  (progn
   (run %{exe:bench_ansi.exe} --ci)
   (diff? ansi.thumper ansi.thumper.corrected))))

(rule
 (alias bench)
 (action
  (progn
   (run %{exe:bench_text.exe} --ci)
   (diff? text.thumper text.thumper.corrected))))

(rule
 (alias bench)
 (action
  (progn
   (run %{exe:bench_input.exe} --ci)
   (diff? input.thumper input.thumper.corrected))))

(rule
 (alias bench)
 (action
  (progn
   (run %{exe:bench_grid.exe} --ci)
   (diff? grid.thumper grid.thumper.corrected))))

(rule
 (alias bench)
 (action
  (progn
   (run %{exe:bench_screen.exe} --ci)
   (diff? screen.thumper screen.thumper.corrected))))
